Apply 1 suggestion(s) to 1 file(s)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ pages:
   script:
     - mkdir public
     - cp -r assets public/assets
-    - cp -r index.html public/index.html
+    - cp index.html public/index.html
   artifacts:
     paths:
       - public
